-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6
-
None
-
Windows 10, MSVC2015 64bit / ANGLE or Desktop GL,XCB
-
45bb9c29e8b70cd15b01d8ab18d1df7f9707c215 (qtbase/5.6, 26.10.2015, 5.6b)
Steps to reproduce:
- set QT_AUTO_SCREEN_SCALE_FACTOR=1
- Run qtquickcontrols\examples\quick\controls\texteditor
Note:
- FreeType looks even worse.
- Same happens when setting QT_SCALE_FACTOR=2 on HighDpi or normal screens.
Note: It does not really matter whether High DPI scaling is active. It is sufficient that QT_AUTO_SCREEN_SCALE_FACTOR is set for the below described initialization order problems to occur.
- is duplicated by
-
QTBUG-48865 Qt Quick Controls flat style: missing control labels
-
- Closed
-
- is required for
-
QTBUG-47958 Issues to be fixed before Qt 5.6.0 Beta
-
- Closed
-
- resulted from
-
QTBUG-46615 Implement High DPI scaling v2 (5.6)
-
- Closed
-